[project]
name = "autodrive-rlv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym-unity==0.26.0",
    "mlagents-envs==0.26.0",
    "protobuf==3.20.3",
    "numpy==1.26.4",
    "sheeprl @ git+https://github.com/Eclectic-Sheep/sheeprl.git",
]
